--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -25,7 +25,7 @@
         android:layout_marginEnd="55dp"
         android:layout_marginStart="55dp"
         android:layout_marginTop="50dp"
-        android:text="@string/app_name"
+        android:text="@string/welcome"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -37,7 +37,7 @@
         android:layout_marginEnd="67dp"
         android:layout_marginStart="67dp"
         android:layout_marginTop="50dp"
-        android:text="@string/app_name"
+        android:text="@string/loading"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
