--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -106,52 +106,50 @@
         app:layout_constraintTop_toBottomOf="@+id/chart" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/AvgTemp"
         android:layout_width="95dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="56dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginStart="16dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="420dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintEnd_toStartOf="@+id/AvgMaxTemp"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/AvgMaxTemp"
         android:layout_width="95dp"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="120dp"
-        tools:layout_editor_absoluteY="420dp" />
+        android:layout_height="19dp"
+        android:layout_marginBottom="124dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginStart="9dp"
+        android:text="Textview2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/AvgMinTemp"
+        app:layout_constraintStart_toEndOf="@+id/AvgTemp" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/AvgMinTemp"
         android:layout_width="95dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="124dp"
+        android:layout_marginEnd="42dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="237dp"
-        tools:layout_editor_absoluteY="420dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="95dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:layout_marginEnd="273dp"
+        android:layout_marginStart="16dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="494dp" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="95dp"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="119dp"
-        tools:layout_editor_absoluteY="494dp" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="95dp"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="237dp"
-        tools:layout_editor_absoluteY="494dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
