--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -72,8 +72,8 @@
         android:layout_marginEnd="12dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="6dp"
-        android:text="5 Days"
         android:onClick="show_5_days"
+        android:text="5 Days"
         app:layout_constraintBottom_toTopOf="@+id/chart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button4"
@@ -107,20 +107,22 @@
 
     <TextView
         android:id="@+id/AvgTemp"
-        android:layout_width="95dp"
-        android:layout_height="wrap_content"
+        android:layout_width="102dp"
+        android:layout_height="43dp"
         android:layout_marginBottom="56dp"
         android:layout_marginEnd="9dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="31dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toTopOf="@+id/WindSpeed"
         app:layout_constraintEnd_toStartOf="@+id/AvgMaxTemp"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button6" />
 
     <TextView
         android:id="@+id/AvgMaxTemp"
-        android:layout_width="95dp"
-        android:layout_height="19dp"
+        android:layout_width="100dp"
+        android:layout_height="37dp"
         android:layout_marginBottom="124dp"
         android:layout_marginEnd="22dp"
         android:layout_marginStart="9dp"
@@ -131,8 +133,8 @@
 
     <TextView
         android:id="@+id/AvgMinTemp"
-        android:layout_width="95dp"
-        android:layout_height="wrap_content"
+        android:layout_width="102dp"
+        android:layout_height="36dp"
         android:layout_marginBottom="124dp"
         android:layout_marginEnd="42dp"
         android:text="TextView"
@@ -140,9 +142,9 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="95dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/WindSpeed"
+        android:layout_width="106dp"
+        android:layout_height="36dp"
         android:layout_marginBottom="50dp"
         android:layout_marginEnd="273dp"
         android:layout_marginStart="16dp"
@@ -150,6 +152,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/PieChart"
+        android:layout_width="210dp"
+        android:layout_height="102dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="6dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/WindSpeed"
+        app:layout_constraintTop_toBottomOf="@+id/AvgMaxTemp" />
 
 
 </android.support.constraint.ConstraintLayout>
