Added Analysis Activity. Mostly Finished Graph Activity

--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -109,10 +109,10 @@
         android:id="@+id/AvgTemp"
         android:layout_width="102dp"
         android:layout_height="43dp"
-        android:layout_marginBottom="56dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="31dp"
+        android:layout_marginBottom="35dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="10dp"
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/WindSpeed"
         app:layout_constraintEnd_toStartOf="@+id/AvgMaxTemp"
@@ -123,20 +123,22 @@
         android:id="@+id/AvgMaxTemp"
         android:layout_width="100dp"
         android:layout_height="37dp"
-        android:layout_marginBottom="124dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginStart="9dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
         android:text="Textview2"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/PieChart"
         app:layout_constraintEnd_toStartOf="@+id/AvgMinTemp"
-        app:layout_constraintStart_toEndOf="@+id/AvgTemp" />
+        app:layout_constraintStart_toEndOf="@+id/AvgTemp"
+        app:layout_constraintTop_toBottomOf="@+id/button6" />
 
     <TextView
         android:id="@+id/AvgMinTemp"
         android:layout_width="102dp"
         android:layout_height="36dp"
-        android:layout_marginBottom="124dp"
-        android:layout_marginEnd="42dp"
+        android:layout_marginBottom="128dp"
+        android:layout_marginEnd="16dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -148,6 +150,7 @@
         android:layout_marginBottom="50dp"
         android:layout_marginEnd="273dp"
         android:layout_marginStart="16dp"
+        android:textColor="@drawable/fade_red"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
