--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -114,6 +114,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="10dp"
         android:text="TextView"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/WindSpeed"
         app:layout_constraintEnd_toStartOf="@+id/AvgMaxTemp"
         app:layout_constraintStart_toStartOf="parent"
@@ -128,6 +129,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
         android:text="Textview2"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/PieChart"
         app:layout_constraintEnd_toStartOf="@+id/AvgMinTemp"
         app:layout_constraintStart_toEndOf="@+id/AvgTemp"
@@ -140,6 +142,7 @@
         android:layout_marginBottom="128dp"
         android:layout_marginEnd="16dp"
         android:text="TextView"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
