--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -108,69 +108,66 @@
     <TextView
         android:id="@+id/AvgTemp"
         android:layout_width="102dp"
-        android:layout_height="43dp"
-        android:layout_marginBottom="35dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="8dp"
         android:text="TextView"
         android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/WindSpeed"
         app:layout_constraintEnd_toStartOf="@+id/AvgMaxTemp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button6" />
 
     <TextView
         android:id="@+id/AvgMaxTemp"
-        android:layout_width="100dp"
-        android:layout_height="37dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="114dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="12dp"
         android:text="Textview2"
         android:textColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/PieChart"
         app:layout_constraintEnd_toStartOf="@+id/AvgMinTemp"
-        app:layout_constraintStart_toEndOf="@+id/AvgTemp"
         app:layout_constraintTop_toBottomOf="@+id/button6" />
 
     <TextView
         android:id="@+id/AvgMinTemp"
-        android:layout_width="102dp"
-        android:layout_height="36dp"
-        android:layout_marginBottom="128dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="117dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
         android:text="TextView"
         android:textColor="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button7" />
 
     <TextView
         android:id="@+id/WindSpeed"
-        android:layout_width="106dp"
-        android:layout_height="36dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginEnd="273dp"
+        android:layout_width="102dp"
+        android:layout_height="43dp"
         android:layout_marginStart="16dp"
-        android:textColor="@drawable/fade_red"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="273dp"
+        android:layout_marginBottom="44dp"
         android:text="TextView"
+        android:textColor="@drawable/fade_red"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/AvgTemp" />
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/PieChart"
         android:layout_width="210dp"
         android:layout_height="102dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="31dp"
         android:layout_marginStart="26dp"
         android:layout_marginTop="6dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/WindSpeed"
-        app:layout_constraintTop_toBottomOf="@+id/AvgMaxTemp" />
+        app:layout_constraintTop_toBottomOf="@+id/AvgMaxTemp"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </android.support.constraint.ConstraintLayout>
