--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -44,7 +44,6 @@
         android:layout_marginTop="6dp"
         android:onClick="show_1_day"
         android:text="Daily"
-
         app:layout_constraintBottom_toTopOf="@+id/chart"
         app:layout_constraintEnd_toStartOf="@+id/button4"
         app:layout_constraintStart_toEndOf="@+id/button2"
@@ -108,9 +107,9 @@
 
     <TextView
         android:id="@+id/AvgTemp"
-        android:layout_width="102dp"
+        android:layout_width="96dp"
         android:layout_height="42dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         android:text="TextView"
         android:textColor="#000000"
@@ -119,9 +118,9 @@
 
     <TextView
         android:id="@+id/AvgMaxTemp"
-        android:layout_width="114dp"
+        android:layout_width="105dp"
         android:layout_height="42dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="12dp"
         android:text="Textview2"
         android:textColor="#000000"
@@ -130,12 +129,12 @@
 
     <TextView
         android:id="@+id/AvgMinTemp"
-        android:layout_width="117dp"
+        android:layout_width="109dp"
         android:layout_height="43dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:text="TextView"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
         android:textColor="#000000"
+        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button7" />
 
@@ -143,32 +142,21 @@
         android:id="@+id/WindSpeed"
         android:layout_width="102dp"
         android:layout_height="43dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="273dp"
-        android:layout_marginBottom="44dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="18dp"
         android:text="TextView"
-        android:color="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toStartOf="@+id/PieChart"
         app:layout_constraintTop_toBottomOf="@+id/AvgTemp" />
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/PieChart"
         android:layout_width="210dp"
         android:layout_height="102dp"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="31dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/WindSpeed"
-        app:layout_constraintTop_toBottomOf="@+id/AvgMaxTemp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/AvgMinTemp" />
 
 
 </android.support.constraint.ConstraintLayout>
